--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@emailjs/browser": "^3.12.1",
 		"@mantine/carousel": "^7.4.1",
 		"@mantine/charts": "^7.4.1",
 		"@mantine/code-highlight": "^7.4.1",
