--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
 		"@tiptap/react": "^2.1.15",
 		"@tiptap/starter-kit": "^2.1.15",
 		"dayjs": "^1.11.10",
+		"embla-carousel-autoplay": "^7.1.0",
 		"embla-carousel-react": "^7.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
